# ida-mcp-workflow

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh
.codex/: config.toml
.gemini/: settings.json
.skills/ida-mcp-workflow/: SKILL.md
.skills/ida-mcp-workflow/references/: mcp_usage.md  output_contracts.md  repo_layout.md  research_flow.md
.skills/ida-mcp-workflow/references/examples/: function_note.md  subjects.md
.skills/ida-mcp-workflow/references/examples/task/: detail.md  header.md  quick.md  task.md  walkthrough.md
